@@ -1,5 +1,7 @@
 2009-01-22  Roland McGrath  <roland@redhat.com>
 
+	* open.c (decompress): Move BUFFER, SIZE decls outside #if.
+
 	* dwfl_segment_report_module.c (addr_segndx): Remove bogus adjustments
 	after address-matching loop.
 
